transf_difs_cayley2.cl color beta

--- a/mandelbulber2/formula/ui/menger_pyramid.ui
+++ b/mandelbulber2/formula/ui/menger_pyramid.ui
@@ -673,7 +673,7 @@
          </font>
         </property>
         <property name="text">
-         <string>aux.DE  adjust (seldom helps)</string>
+         <string>aux.DE  adjust (sometimes helps)</string>
         </property>
        </widget>
       </item>
